{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 391,
  "lineage": "0abb84da-fc00-d402-821e-2338e48a85c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "omega_prd_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbfdd2ab00c69c31",
            "arn": "arn:aws:ec2:eu-west-3:552239912540:elastic-ip/eipalloc-0bbfdd2ab00c69c31",
            "association_id": "eipassoc-07122a0d8a7634483",
            "domain": "vpc",
            "id": "eipalloc-0bbfdd2ab00c69c31",
            "instance": "i-0e209c39179843ad2",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0c1a94472b06d9ba2",
            "private_dns": "ip-10-0-1-78.eu-west-3.compute.internal",
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-13-37-121-133.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.121.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "omega_prd_eip_0"
            },
            "tags_all": {
              "Name": "omega_prd_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.omega_prd_backend",
            "aws_key_pair.omega_prd_backend_key_pair",
            "aws_security_group.omega_prd_backend_sg",
            "aws_subnet.omega_prd_public_subnet",
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available",
            "tls_private_key.omega_prd_backend_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "omega_prd_eip_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df41d8b120de0b9e",
            "arn": "arn:aws:ec2:eu-west-3:552239912540:elastic-ip/eipalloc-0df41d8b120de0b9e",
            "association_id": "eipassoc-0d2494e24f6549a11",
            "domain": "vpc",
            "id": "eipalloc-0df41d8b120de0b9e",
            "instance": "i-0306839489910e772",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-03e7a1ef770d01281",
            "private_dns": "ip-10-0-1-135.eu-west-3.compute.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-15-236-98-193.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.98.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "omega_prd_eip_frontend0"
            },
            "tags_all": {
              "Name": "omega_prd_eip_frontend0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.omega_prd_frontend",
            "aws_key_pair.omega_prd_frontend_key_pair",
            "aws_security_group.omega_prd_frontend_sg",
            "aws_subnet.omega_prd_public_subnet",
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available",
            "tls_private_key.omega_prd_frontend_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "omega_prd_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07e67bd6b5d9fd892",
            "arn": "arn:aws:ec2:eu-west-3:552239912540:instance/i-0e209c39179843ad2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "omega_prd_back_vol"
                },
                "tags_all": {
                  "Name": "omega_prd_back_vol"
                },
                "throughput": 0,
                "volume_id": "vol-0d1ec6fe4af1a880a",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e209c39179843ad2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "omega_prd_backend_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1a94472b06d9ba2",
            "private_dns": "ip-10-0-1-78.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-13-37-121-133.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.121.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc164ff7c3bab12a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058977e0c7b991e0d",
            "tags": {
              "Name": "prd_omega_backend"
            },
            "tags_all": {
              "Name": "prd_omega_backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b7d989c4740aa99"
            ]
          },
          "dependencies": [
            "aws_key_pair.omega_prd_backend_key_pair",
            "aws_security_group.omega_prd_backend_sg",
            "aws_subnet.omega_prd_public_subnet",
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available",
            "tls_private_key.omega_prd_backend_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "omega_prd_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07e67bd6b5d9fd892",
            "arn": "arn:aws:ec2:eu-west-3:552239912540:instance/i-0306839489910e772",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "omega_prd_front_vol"
                },
                "tags_all": {
                  "Name": "omega_prd_front_vol"
                },
                "throughput": 0,
                "volume_id": "vol-0e9a931dda44385a0",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0306839489910e772",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "omega_prd_frontend_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e7a1ef770d01281",
            "private_dns": "ip-10-0-1-135.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-15-236-98-193.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.98.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0691ed374687c31c5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058977e0c7b991e0d",
            "tags": {
              "Name": "prd_omega_frontend"
            },
            "tags_all": {
              "Name": "prd_omega_frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085a644d54a43dcfd"
            ]
          },
          "dependencies": [
            "aws_key_pair.omega_prd_frontend_key_pair",
            "aws_security_group.omega_prd_frontend_sg",
            "aws_subnet.omega_prd_public_subnet",
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available",
            "tls_private_key.omega_prd_frontend_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:internet-gateway/igw-0ee4d5dc31882d994",
            "id": "igw-0ee4d5dc31882d994",
            "owner_id": "552239912540",
            "tags": {
              "Name": "gateway_production"
            },
            "tags_all": {
              "Name": "gateway_production"
            },
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "omega_prd_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:route-table/rtb-077f3fd34816f6628",
            "id": "rtb-077f3fd34816f6628",
            "owner_id": "552239912540",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "omega_prd_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:route-table/rtb-040371a530df9e666",
            "id": "rtb-040371a530df9e666",
            "owner_id": "552239912540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee4d5dc31882d994",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073fefde0a391475a",
            "route_table_id": "rtb-077f3fd34816f6628",
            "subnet_id": "subnet-01a1e3ac6c585c5f1"
          },
          "dependencies": [
            "aws_route_table.omega_prd_private_rt",
            "aws_subnet.omega_prd_private_subnet",
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527549cba6eaeaee",
            "route_table_id": "rtb-077f3fd34816f6628",
            "subnet_id": "subnet-0c526e19067d3cbb6"
          },
          "dependencies": [
            "aws_route_table.omega_prd_private_rt",
            "aws_subnet.omega_prd_private_subnet",
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c49ea8f3858f0483",
            "route_table_id": "rtb-040371a530df9e666",
            "subnet_id": "subnet-058977e0c7b991e0d"
          },
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_route_table.omega_prd_public_rt",
            "aws_subnet.omega_prd_public_subnet",
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "omega_prd_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:security-group/sg-05b7d989c4740aa99",
            "description": "Groupe securite omega",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b7d989c4740aa99",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.135/32"
                ],
                "description": "Allow All trafic from dev_frontend",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For Node-exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For pushgateway",
                "from_port": 9091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9091
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "for tomcat",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "omega_prd_backend_sg",
            "name_prefix": "",
            "owner_id": "552239912540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Omega Security Group"
            },
            "tags_all": {
              "Name": "Omega Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "omega_prd_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:security-group/sg-0ee642ca185676ecb",
            "description": "Groupe securite omega db",
            "egress": [],
            "id": "sg-0ee642ca185676ecb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow postgresdatabase traffic from only the web sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b7d989c4740aa99"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "omega_prd_db_sg",
            "name_prefix": "",
            "owner_id": "552239912540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_db_omega"
            },
            "tags_all": {
              "Name": "sg_db_omega"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.omega_prd_backend_sg",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "omega_prd_frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:security-group/sg-085a644d54a43dcfd",
            "description": "Groupe securite omega frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085a644d54a43dcfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For Node-exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For Tomacat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "88.174.68.140/32",
                  "46.193.7.1/32",
                  "88.185.51.70/32",
                  "176.163.253.189/32",
                  "84.6.58.138/32",
                  "37.66.172.199/32",
                  "85.170.118.61/32"
                ],
                "description": "For pushgateway",
                "from_port": 9091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9091
              }
            ],
            "name": "omega_prd_frontend_sg",
            "name_prefix": "",
            "owner_id": "552239912540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "omega_prd_frontend_sg"
            },
            "tags_all": {
              "Name": "omega_prd_frontend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "omega_prd_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:subnet/subnet-01a1e3ac6c585c5f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a1e3ac6c585c5f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552239912540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omega_prd_private_subnet_0"
            },
            "tags_all": {
              "Name": "omega_prd_private_subnet_0"
            },
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "dependencies": [
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:subnet/subnet-0c526e19067d3cbb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c526e19067d3cbb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552239912540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omega_prd_private_subnet_1"
            },
            "tags_all": {
              "Name": "omega_prd_private_subnet_1"
            },
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "dependencies": [
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "omega_prd_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:subnet/subnet-058977e0c7b991e0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058977e0c7b991e0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552239912540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omega_prd_public_subnet_0"
            },
            "tags_all": {
              "Name": "omega_prd_public_subnet_0"
            },
            "vpc_id": "vpc-0bde9e37907931293"
          },
          "dependencies": [
            "aws_vpc.vpc_prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:552239912540:vpc/vpc-0bde9e37907931293",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0c57d7fae38dd54",
            "default_route_table_id": "rtb-00f24a7026aeb4f48",
            "default_security_group_id": "sg-0b7df837cdd7f14e6",
            "dhcp_options_id": "dopt-01687b134227ed1a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bde9e37907931293",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f24a7026aeb4f48",
            "owner_id": "552239912540",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}